Restore Java 8 support
Fixes #457